# applied-ai-health-rag

./: .gitignore  README.md  main.py  pyproject.toml
data/chunks/: all_chunks.json  chunks_by_file.json
data/eval/: qa_ground_truth_diabetes_overview.json  qa_ground_truth_diabetes_treatment.json  qa_ground_truth_hypertension_overview.json  qa_ground_truth_hypertension_treatment.json
data/eval_results/: ragas_evaluation_results.csv  ragas_evaluation_results.json
data/processed/health_education/conditions/diabetes/: diabetes_medlineplus_overview.md
data/processed/health_education/conditions/hypertension/: hypertension_medlineplus_overview.md
data/processed/health_education/treatments/diabetes/: diabetes_medlineplus_treatment.md
data/processed/health_education/treatments/hypertension/: hypertension_medlineplus_treatment.md
notebooks/: 1.download_raw_data.ipynb  2.convert_html_to_markdown.ipynb  3.chunk_markdown.ipynb  4.ingest_chunks_to_chromadb.ipynb  5.evaluate_with_real_data.ipynb
