[project]
name = "applied-ai-health-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "requests>=2.32.5",
    "docling>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain>=1.0.5",
    "python-dotenv>=1.0.0",
    "ragas>=0.3.9",
    "datasets>=2.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
]
